{
    "name": "InputMaster",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "5d3d44c8-d454-4538-8411-d3c47cd98708",
            "actions": [
                {
                    "name": "Move",
                    "id": "6b8a60a7-277a-471d-9044-27c04aa777d8",
                    "expectedControlLayout": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "Dpad",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "up",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "down",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "left",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "right",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}